--- a/.github/workflows/update-branches.yml
+++ b/.github/workflows/update-branches.yml
@@ -39,7 +39,7 @@ jobs:
           echo "Upstream default branch is: $DEFAULT_BRANCH_UPSTREAM"
 
       - name: Update all local branches from upstream default
-        continue-on-error: true
+        continue-on-error: false
         env:
           UPSTREAM_DEFAULT_BRANCH: ${{ steps.upstream_default_branch.outputs.UPSTREAM_DEFAULT_BRANCH }}
         run: |
